--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: roadaccidentdashboard
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Australian Fatal Road Accident Dashbaord
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Author: Luiz Octavio Furlanis
+Maintainer: Luiz Octavio Furlanis <furlanis.lu@gmail.com>
+Description: This R&Shiny dashboard allows the user to visualize the fatal road accidents, that have been accoured in Autralia, from 1989 to 2021.
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
