--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,4 @@
-
-.Rproj.user/8E71D4BE/sources/prop/09144DFC
-.Rproj.user/8E71D4BE/sources/session-b50ec92b/05B5CFE1
-.Rproj.user/8E71D4BE/sources/session-b50ec92b/05B5CFE1-contents
-.Rproj.user/8E71D4BE/sources/per/t/05B5CFE1-contents
-.Rproj.user/8E71D4BE/saved_source_markers
-.Rproj.user/8E71D4BE/rmd-outputs
-.Rproj.user/8E71D4BE/cpp-definition-cache
+.Rproj.user
 .Rhistory
-.Rproj.user/8E71D4BE/sources/per/t/05B5CFE1
-.Rproj.user/8E71D4BE/sources/session-b50ec92b/05B5CFE1
-.Rproj.user/8E71D4BE/sources/session-b50ec92b/05B5CFE1-contents
-.Rproj.user/8E71D4BE/sources/session-b50ec92b/lock_file
+.RData
+.Ruserdata
